# SDLSharedContext

./: .gitignore  CMakeLists.txt  README.md  SDLSharedContext.sln
SDLSharedContext/: SDLSharedContext.cpp  SDLSharedContext.vcxproj  SDLSharedContext.vcxproj.filters  application.cpp  application.h  camera.cpp  camera.h  main.cpp  shader.cpp  shader.h  share_dst_texture.cpp  share_dst_texture.h  share_src_texture.cpp  share_src_texture.h  single_offscreen_rendering.cpp  single_offscreen_rendering.h  temp.cpp  texture.frag  triangle.frag  triangle.vert
SDLSharedContext/Debug/: vc141.idb
SDLSharedContext/Debug/SDLSharedContext.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SDLSharedContext.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
